just to stay on the safe side

--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -1,1 +1,56 @@
-<p>front-page works!</p>
+<div class="container-fluid" >
+  <div class="row">
+
+    <img src="\assets\Images\NewWoodenDesignWithArtistAndBallsFeaturedArtStore.png" alt=""  class="main-header-img">
+
+    <div class="app-banner">
+      <div class="app-banner-item">
+        <a href="https://play.google.com/store/apps/details?id=com.ImmersiPi.BABAP" target="_blank">
+          <img src="\assets\Images\google-play-badge.png" alt="">
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row mx-lg-n5">
+    <div class="col">
+      <p>front-page works!</p>
+      <p>front-page worksaaaaa!</p>
+      <p>front-page bbbbbbbbbbbbbb!</p>
+      <p>front-page ccccccccccccccccccc!</p>
+      <p>front-page dddddddddddddddddddddd!</p>
+      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
+      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
+      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
+      <p>front-page works!</p>
+      <p>front-page worksaaaaa!</p>
+      <p>front-page bbbbbbbbbbbbbb!</p>
+      <p>front-page ccccccccccccccccccc!</p>
+      <p>front-page dddddddddddddddddddddd!</p>
+      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
+      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
+      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
+      <p>front-page works!</p>
+      <p>front-page worksaaaaa!</p>
+      <p>front-page bbbbbbbbbbbbbb!</p>
+      <p>front-page ccccccccccccccccccc!</p>
+      <p>front-page dddddddddddddddddddddd!</p>
+      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
+      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
+      <p>front-page ggggggggggggggggggggggg ggggggggggggggggggggggg!</p>
+      <p>front-page works!</p>
+      <p>front-page worksaaaaa!</p>
+      <p>front-page bbbbbbbbbbbbbb!</p>
+      <p>front-page ccccccccccccccccccc!</p>
+      <p>front-page dddddddddddddddddddddd!</p>
+      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
+      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
+      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
+
+    </div>
+
+  </div>
+
+</div>
