--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,102 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3 p-3">
-  <a class="navbar-brand" routerLink="" routerLinkActive="active">Home</a>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <!-- Logo and brand text -->
+  <div class="col-2">
+    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=true">
+      <div class="container d-flex">
+        <div class="row align-middle">
+          <h2 class="m-auto brand-text" [ngClass]="{'active': isHomepageActive}">ImmersiPi</h2>
+        </div>
+        <div class="col mx-3">
+          <img src="assets\Images\FirstCompanyLogoBluleish.png" alt="Logo" class="logo-img">
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <!-- Main routes -->
+  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse justify-content-center mx-3 col-6">
+
+    <ul class="navbar-nav" *ngFor="let item of navItems">
+
+      <li class="nav-item main-navigation-item" >
+        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=false">
+          <h3>{{item.name}}</h3>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- right Side routes -->
+  <div class="col">
+    <div  [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end" (click)="isNavbarCollapsed = true">
+      <ul class="navbar-nav mx-4">
+        <li class="nav-item">
+          <h6 class="nav-link">Log In</h6>
+        </li>
+        <li class="nav-item">
+          <h6 class="nav-link">Sign Up</h6>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Show/hide Menu button -->
+  <button class="navbar-toggler m-3 fixed-top-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+</nav>
 
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/Images" routerLinkActive="active">
-          Images
-          <!--
 
-          -->
-          <span class="sr-only">(current)</span>
+<!-- Second navigation a copy of previous with the exception of being shown only when scrolling up -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark hidden-navbar" [ngClass]="{'fixed-navbar':scrollingUp==true}">
+
+  <!-- Logo and brand text -->
+  <div class="col-2">
+    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=true">
+      <div class="container d-flex">
+        <div class="row align-middle">
+          <h2 class="m-auto brand-text" [ngClass]="{'active': isHomepageActive}">ImmersiPi</h2>
+        </div>
+        <div class="col mx-3">
+          <img src="assets\Images\FirstCompanyLogoBluleish.png" alt="Logo" class="logo-img">
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <!-- Main routes -->
+  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse justify-content-center mx-3 col-6">
+
+    <ul class="navbar-nav" *ngFor="let item of navItems">
+
+      <li class="nav-item main-navigation-item" >
+        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=false">
+          <h3>{{item.name}}</h3>
         </a>
       </li>
-
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/Users" routerLinkActive="active">Users</a>
-      </li>
-
     </ul>
   </div>
+
+  <!-- right Side routes -->
+  <div class="col">
+    <div  [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end" (click)="isNavbarCollapsed = true">
+      <ul class="navbar-nav mx-4">
+        <li class="nav-item">
+          <h6 class="nav-link">Log In</h6>
+        </li>
+        <li class="nav-item">
+          <h6 class="nav-link">Sign Up</h6>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Show/hide Menu button -->
+  <button class="navbar-toggler m-3 fixed-top-right" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
 </nav>
