--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,7 @@
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">
-      Footer works
-
-    </span>
+    <div class="row">
+      <app-footer-upper></app-footer-upper>
+    </div>
   </div>
 </footer>
