--- a/src/app/components/footer/footer-upper/footer-upper.component.html
+++ b/src/app/components/footer/footer-upper/footer-upper.component.html
@@ -1,24 +1,26 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-lg-2">
-      <section class="IPiInfo">
-        <div class="IPiInfoHeader">
-          ImmersiPi
-        </div>
-        <p class="IPiInfoBody">
-          ImmersiPi is primarily a game development studio focusing on giving players greater value.
-        </p>
-      </section>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
+<div class="footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-lg-3">
+        <section class="IPiInfo">
+          <div class="IPiInfoHeader">
+            ImmersiPi
+          </div>
+          <p class="IPiInfoBody">
+            ImmersiPi is primarily a game development studio focusing on giving players greater value.
+          </p>
+        </section>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-lg-4">
 
-    </div>
-    <div class="col">
-      <nav>
-        <a href="">Link</a>
-        <a href="">Link</a>
-        <a href="">Link</a>
-      </nav>
+      </div>
+      <div class="col">
+        <nav>
+          <a href="">Link</a>
+          <a href="">Link</a>
+          <a href="a">Link</a>
+        </nav>
+      </div>
     </div>
   </div>
 </div>
