--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -14,43 +14,29 @@
   </div>
 </div>
 <div class="container">
-  <div class="row mx-lg-n5">
+  <div class="row row-cols-2">
     <div class="col">
-      <p>front-page works!</p>
-      <p>front-page worksaaaaa!</p>
-      <p>front-page bbbbbbbbbbbbbb!</p>
-      <p>front-page ccccccccccccccccccc!</p>
-      <p>front-page dddddddddddddddddddddd!</p>
-      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
-      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
-      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
-      <p>front-page works!</p>
-      <p>front-page worksaaaaa!</p>
-      <p>front-page bbbbbbbbbbbbbb!</p>
-      <p>front-page ccccccccccccccccccc!</p>
-      <p>front-page dddddddddddddddddddddd!</p>
-      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
-      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
-      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
-      <p>front-page works!</p>
-      <p>front-page worksaaaaa!</p>
-      <p>front-page bbbbbbbbbbbbbb!</p>
-      <p>front-page ccccccccccccccccccc!</p>
-      <p>front-page dddddddddddddddddddddd!</p>
-      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
-      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
-      <p>front-page ggggggggggggggggggggggg ggggggggggggggggggggggg!</p>
-      <p>front-page works!</p>
-      <p>front-page worksaaaaa!</p>
-      <p>front-page bbbbbbbbbbbbbb!</p>
-      <p>front-page ccccccccccccccccccc!</p>
-      <p>front-page dddddddddddddddddddddd!</p>
-      <p>front-page eeeeeeeeeeeeeeeeeeeeeeeeeee!</p>
-      <p>front-page ffffffffffffffffffffffffffffffffffffff!</p>
-      <p>front-page ggggggggggggggggggggg ggggggggggggggggggggggggg!</p>
-
+      <app-featured-game></app-featured-game>
     </div>
-
+    <div class="col">
+      <app-featured-game></app-featured-game>
+    </div>
+    <div class="col">
+      <app-featured-game></app-featured-game>
+    </div>
+    <div class="col">
+      <app-featured-game></app-featured-game>
+    </div>
   </div>
+</div>
 
+
+<div class="px-4 py-5 my-5 text-center">
+  <img src="assets\Images\FirstCompanyLogoBluleish.png" alt="Logo" class="d-block mx-auto mb-4" width="72" height="72">
+  <h1 class="display-5 fw-bold brand-text">ImmersiPi</h1>
+<div class="col-lg-6 mx-auto">
+  <p class="lead mb-4">
+    At ImmersiPi, we believe that life should be an adventure, an escape from the ordinary. Our mission is to deliver cutting-edge products that immerse people into their surroundings, taking them on incredible journeys beyond imagination. With a primary focus on captivating games, we aspire to revolutionize entertainment and redefine the way you experience the world around you.
+  </p>
+</div>
 </div>
