--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,52 @@ footer {
   width: 100%;
 }
 
+@media screen  and (max-width: 4048px) {
+  p{
+    font-size: 3rem ;
+  }
+}
+
+@media screen  and (max-width: 2048px) {
+  p{
+    font-size: 1.5rem ;
+  }
+}
+@media screen and (max-width:1024px) {
+  .app-banner-item{
+    max-width: 200px;
+    margin: 2px 2px;
+    bottom: 40px;
+  }
+  p{
+    font-size: 1rem ;
+  }
+  .app-banner-item a img{
+    max-width: 200px;
+  }
+}
+
+@media screen and (max-width:640px) {
+
+  .app-banner{
+    flex-wrap: wrap;
+    right: 10px;
+    bottom: 15px;
+  }
+  .app-banner-item{
+    max-width: 100%;
+    bottom: 0;
+  }
+
+  .app-banner-item a img{
+    max-width: 150px;
+    margin-right:0;
+  }
+
+}
+
+
+.brand-text{
+  font-family: Cursive,  Monospace, Fantasy;
+  color: black;
+}
