Changes made to css hierarchy, front page cards dev, next front page cards style & games card

--- a/src/app/components/front-page/featured-game/featured-game.component.html
+++ b/src/app/components/front-page/featured-game/featured-game.component.html
@@ -1,15 +1,19 @@
-<div class=" bg-image" style="background-image: url('assets/Images/NewWoodenDesignWithArtistAndBallsFeaturedArtStore.png'); background-size: 100%; background-position: center; background-repeat:no-repeat;">
+<div
+  class="bg-info bg-gradient bg-opacity-10 border-start border-top border-dark border-5 rounded-startrounded-3 align-items-center justify-content-center mb-4 p-3">
 
-  <div class="row justify-content-center align-items-center">
-      <div class="col-12 col-md-8 col-lg-6 bg-light border-start border-top border-white rounded-start p-4" style="clip-path: polygon(100% 0, 100% 100%, 0% 100%);">
-        <h1 class="mb-4">Welcome to ImmersiPi</h1>
-        <p>
-          At ImmersiPi, we believe that life should be an adventure, an escape from the ordinary.
-        </p>
-        <div class="text-center">
-          <button class="btn btn-primary btn-lg mt-3">Explore Now</button>
-        </div>
+  <div class="row">
+    <div class="bg-image rounded col-5"
+      style="background-image: url('assets/Images/obj_artist_happy.png'); background-size: contain; background-position: left; background-repeat:no-repeat;">
+    </div>
+    <div class="col-5">
+      <h1 class="mb-4">Featured Game</h1>
+      <p class="text-end">
+        Play Ball Art
+      </p>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg mt-3">Explore Now</button>
       </div>
+
     </div>
   </div>
-
+</div>
