--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid" >
+<div class="container-fluid">
   <div class="row">
 
-    <img src="\assets\Images\NewWoodenDesignWithArtistAndBallsFeaturedArtStore.png" alt=""  class="main-header-img">
+    <img src="\assets\Images\NewWoodenDesignWithArtistAndBallsFeaturedArtStore.png" alt="" class="main-header-img">
 
     <div class="app-banner">
       <div class="app-banner-item">
@@ -13,18 +13,18 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row row-cols-2">
-    <div class="col">
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-lg-4 m-2">
       <app-featured-game></app-featured-game>
     </div>
-    <div class="col">
+    <div class="col-lg-4 m-2">
       <app-featured-game></app-featured-game>
     </div>
-    <div class="col">
+    <div class="col-lg-4 m-2">
       <app-featured-game></app-featured-game>
     </div>
-    <div class="col">
+    <div class="col-lg-4 m-2">
       <app-featured-game></app-featured-game>
     </div>
   </div>
@@ -34,9 +34,12 @@
 <div class="px-4 py-5 my-5 text-center">
   <img src="assets\Images\FirstCompanyLogoBluleish.png" alt="Logo" class="d-block mx-auto mb-4" width="72" height="72">
   <h1 class="display-5 fw-bold brand-text">ImmersiPi</h1>
-<div class="col-lg-6 mx-auto">
-  <p class="lead mb-4">
-    At ImmersiPi, we believe that life should be an adventure, an escape from the ordinary. Our mission is to deliver cutting-edge products that immerse people into their surroundings, taking them on incredible journeys beyond imagination. With a primary focus on captivating games, we aspire to revolutionize entertainment and redefine the way you experience the world around you.
-  </p>
-</div>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">
+      At ImmersiPi, we believe that life should be an adventure, an escape from the ordinary. Our mission is to deliver
+      cutting-edge products that immerse people into their surroundings, taking them on incredible journeys beyond
+      imagination. With a primary focus on captivating games, we aspire to revolutionize entertainment and redefine the
+      way you experience the world around you.
+    </p>
+  </div>
 </div>
