--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
   <!-- Logo and brand text -->
   <div class="col-2">
-    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=true">
+    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true"
+      (click)="isHomepageActive=true">
       <div class="container d-flex">
         <div class="row align-middle">
           <h2 class="m-auto brand-text" [ngClass]="{'active': isHomepageActive}">ImmersiPi</h2>
@@ -20,8 +20,9 @@
 
     <ul class="navbar-nav" *ngFor="let item of navItems">
 
-      <li class="nav-item main-navigation-item" >
-        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=false">
+      <li class="nav-item main-navigation-item">
+        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true"
+          (click)="isHomepageActive=false">
           <h3>{{item.name}}</h3>
         </a>
       </li>
@@ -30,7 +31,8 @@
 
   <!-- right Side routes -->
   <div class="col">
-    <div  [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end" (click)="isNavbarCollapsed = true">
+    <div [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end"
+      (click)="isNavbarCollapsed = true">
       <ul class="navbar-nav mx-4">
         <li class="nav-item">
           <h6 class="nav-link">Log In</h6>
@@ -55,7 +57,8 @@
 
   <!-- Logo and brand text -->
   <div class="col-2">
-    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=true">
+    <a class="nav-link navbar-brand" routerLink="" routerLinkActive="active" (click)="isNavbarCollapsed = true"
+      (click)="isHomepageActive=true">
       <div class="container d-flex">
         <div class="row align-middle">
           <h2 class="m-auto brand-text" [ngClass]="{'active': isHomepageActive}">ImmersiPi</h2>
@@ -72,8 +75,9 @@
 
     <ul class="navbar-nav" *ngFor="let item of navItems">
 
-      <li class="nav-item main-navigation-item" >
-        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true" (click)="isHomepageActive=false">
+      <li class="nav-item main-navigation-item">
+        <a class="nav-link" routerLink="/{{item.url}}" routerLinkActive="active" (click)="isNavbarCollapsed = true"
+          (click)="isHomepageActive=false">
           <h3>{{item.name}}</h3>
         </a>
       </li>
@@ -82,7 +86,8 @@
 
   <!-- right Side routes -->
   <div class="col">
-    <div  [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end" (click)="isNavbarCollapsed = true">
+    <div [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end"
+      (click)="isNavbarCollapsed = true">
       <ul class="navbar-nav mx-4">
         <li class="nav-item">
           <h6 class="nav-link">Log In</h6>
