changes made to main page cards

--- a/src/app/components/front-page/featured-game/featured-game.component.html
+++ b/src/app/components/front-page/featured-game/featured-game.component.html
@@ -1,19 +1,27 @@
-<div
-  class="bg-info bg-gradient bg-opacity-10 border-start border-top border-dark border-5 rounded-startrounded-3 align-items-center justify-content-center mb-4 p-3">
+<!-- <div
+  style ="background-image: url('assets/Images/transparent-background-illustrator-paint-splatter-9.png'); background-size: contain; background-repeat: no-repeat; background-position: left;"
+  class="
+   border-start border-top border-dark border-2 rounded-start rounded-3 align-items-center justify-content-center mb-4">
 
-  <div class="row">
-    <div class="bg-image rounded col-5"
-      style="background-image: url('assets/Images/obj_artist_happy.png'); background-size: contain; background-position: left; background-repeat:no-repeat;">
+  <div class="row border-end border-3 border-rounded justify-content-center">
+    <div class="rounded-3 col-sm-4" style ="background-image: url('assets/Images/obj_artist_cheeky.png'); background-size: contain; background-repeat: no-repeat; background-position: left; margin-left: -0.25rem; margin-bottom: -1rem;">
     </div>
-    <div class="col-5">
-      <h1 class="mb-4">Featured Game</h1>
-      <p class="text-end">
+    <div class="col-sm-4">
+      <h1 class="mb-4 text-center">Featured Game</h1>
+      <p class="text-center">
         Play Ball Art
       </p>
       <div class="text-center">
         <button class="btn btn-primary btn-lg mt-3">Explore Now</button>
       </div>
-
     </div>
   </div>
-</div>
+</div> -->
+
+  <div class="card justify-content-center align-items-center m-auto" style="max-width: 30rem;">
+    <img src="assets/Images/obj_artist_cheeky.png" class="card-img-top rounded-3" alt="Image 1" style="max-width: 30rem;">
+    <div class="card-body">
+      <h5 class="card-title">Card 1</h5>
+      <p class="card-text">Some text about card 1.</p>
+      <a href="#" class="btn btn-primary">Learn More</a>
+    </div>
