--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -13,9 +13,9 @@
     </div>
   </div>
 </div>
-<div class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-lg-4 m-2">
+<div class="container">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-lg-4 m-2 justify-content-center align-items-center">
       <app-featured-game></app-featured-game>
     </div>
     <div class="col-lg-4 m-2">
