Styled the cards on first page, adjusted styling for different resolutions

--- a/src/app/components/front-page/featured-game/featured-game.component.html
+++ b/src/app/components/front-page/featured-game/featured-game.component.html
@@ -1,4 +1,4 @@
-<!-- <div
+:<!-- <div
   style ="background-image: url('assets/Images/transparent-background-illustrator-paint-splatter-9.png'); background-size: contain; background-repeat: no-repeat; background-position: left;"
   class="
    border-start border-top border-dark border-2 rounded-start rounded-3 align-items-center justify-content-center mb-4">
@@ -18,10 +18,13 @@
   </div>
 </div> -->
 
-  <div class="card justify-content-center align-items-center m-auto" style="max-width: 30rem;">
-    <img src="assets/Images/obj_artist_cheeky.png" class="card-img-top rounded-3" alt="Image 1" style="max-width: 30rem;">
-    <div class="card-body">
-      <h5 class="card-title">Card 1</h5>
-      <p class="card-text">Some text about card 1.</p>
-      <a href="#" class="btn btn-primary">Learn More</a>
+  <div class="card justify-content-center align-items-center m-auto mainCard" >
+
+    <img src="assets/Images/bg_frame1.png" class="card-img-top rounded-3" alt="Image 1">
+    <img src="assets/Images/obj_title.png" class="card-img-top rounded-3 card-title-image-custom" alt="Image 2">
+
+    <div class="card-body card-body-custom">
+      <h5 class="card-title">Featured Game</h5>
+      <p class="card-text">Play Ball Art and bring life to your day with fun and engaging gamplay and colorful visuals</p>
+      <a href="https://play.google.com/store/apps/details?id=com.ImmersiPi.BABAP" target="_blank" class="btn btn-primary">Play</a>
     </div>
