--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <!-- right Side routes -->
-  <div class="col">
+  <div class="col" style="visibility: hidden;">
     <div [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end"
       (click)="isNavbarCollapsed = true">
       <ul class="navbar-nav mx-4">
@@ -85,7 +85,7 @@
   </div>
 
   <!-- right Side routes -->
-  <div class="col">
+  <div class="col" style="visibility: hidden;">
     <div [ngbCollapse]="isNavbarCollapsed" class=" navbar-collapse collapse justify-content-end"
       (click)="isNavbarCollapsed = true">
       <ul class="navbar-nav mx-4">
