Added a basic layout as a test

--- a/src/app/components/games-page/games-page.component.html
+++ b/src/app/components/games-page/games-page.component.html
@@ -1,24 +1,32 @@
-<div class="container mt-5">
-  <div class="flag-row">
-    <div class="flag-image">
-      <img src="assets/Images/obj_artist_happy.png" alt="Image 1">
+<div class="container p-4 m-auto">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-lg-6">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
     </div>
-    <div class="flag-text">
-      <h2>Ball Art: Bouncing Balls</h2>
-      <p> Try your hand at a game where playing it is like a work of art. Actually, not just like work of art, with every time oyuj play you create a unique piece of art, that you can claim as your own</p>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
+    </div>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
+    </div>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
+    </div>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
+    </div>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
+    </div>
+    <div class="col-xs-12 col-sm-4 col-lg-3">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+
     </div>
   </div>
-
-  <div class="flag-row">
-    <div class="flag-text">
-      <h2>Item Title 2</h2>
-      <p>Description for Item 2.</p>
-    </div>
-    <div class="flag-image">
-      <img src="assets/Images/obj_artist_happy.png" alt="Image 2">
-    </div>
-  </div>
-
-  <!-- Add more flag-rows here -->
-
 </div>
