--- a/src/app/components/games-page/games-page.component.html
+++ b/src/app/components/games-page/games-page.component.html
@@ -1,6 +1,10 @@
 <div class="container p-4 m-auto">
   <div class="row">
-    <div class="col-xs-12 col-sm-8 col-lg-6">
+
+    <div  *ngFor="let i of items; first as isFirst" [ngClass]="isFirst ? 'col-xs-12 col-sm-8 col-lg-6 mt-2' : 'col-xs-12 col-sm-4 col-lg-3 mt-2'">
+      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
+    </div>
+    <!-- <div class="col-xs-12 col-sm-8 col-lg-6">
       <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
 
     </div>
@@ -27,6 +31,6 @@
     <div class="col-xs-12 col-sm-4 col-lg-3">
       <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
 
-    </div>
+    </div> -->
   </div>
 </div>
