Simplified the products view, need to change the data but for now that part is done

--- a/src/app/components/front-page/featured-game/featured-game.component.html
+++ b/src/app/components/front-page/featured-game/featured-game.component.html
@@ -1,4 +1,4 @@
-:<!-- <div
+<!-- <div
   style ="background-image: url('assets/Images/transparent-background-illustrator-paint-splatter-9.png'); background-size: contain; background-repeat: no-repeat; background-position: left;"
   class="
    border-start border-top border-dark border-2 rounded-start rounded-3 align-items-center justify-content-center mb-4">
