--- a/src/app/components/games-page/games-page.component.html
+++ b/src/app/components/games-page/games-page.component.html
@@ -1,28 +1,16 @@
 <div class="container p-4 m-auto">
-  <div class="row">
-
-    <div *ngFor="let i of products; first as isFirst" [ngClass]="isFirst ? 'col-xs-12 col-sm-8 col-lg-6 mt-2' : 'col-xs-12 col-sm-4 col-lg-3 mt-2'">
-      <div [ngClass]="isFirst ? 'feturedProduct' : ''" class="showcaseBackground"  [style.background-image]="'url(' + i.showcaseImageUrl +')'">
-          {{i.name}}
-          <div style="    position: relative;
-          top: 256px;
-          margin: auto;
-          border-radius: 12px/12px 0;
-          box-shadow: 1px 1px 5px 1px;
-          background: linear-gradient(271deg, #ffffffc9, #8b7442);">
-            {{i.description}}
-          </div>
+  <div class="row justify-content-center">
+    <div *ngFor="let i of products" class="col-xs-12 col-sm-4 col-lg-3 mt-2 d-flex justify-content-center">
+      <div class="card">
+        <a href="{{i.primaryUrl}}">
+       <!-- [ngClass]="isFirst ? 'feturedProduct' : ''" class="showcaseBackground mb-2"  [style.background-image]="'url(' + i.showcaseImageUrl +')'"> -->
+          <img src="{{i.showcaseImageUrl}}" alt="{{i.name}}" class="card-image-top showcaseBackground">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">{{i.name}}</h5>
+          <p class="card-text">{{i.description}}</p>
+        </div>
       </div>
-
     </div>
-
-    <!-- <div class="col-xs-12 col-sm-8 col-lg-6">
-      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
-    </div>
-
-    <div class="col-xs-12 col-sm-4 col-lg-3">
-      <img src="\assets\Images\bg_frame1.png" alt="" style="width: 100%; height: 100%;">
-    </div> -->
-
-  </div>
+   </div>
 </div>
