--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -16,16 +16,19 @@
 <div class="container-fluid">
 
   <div class="row justify-content-center">
+
     <div class="col-lg-4 m-5">
       <app-featured-game></app-featured-game>
     </div>
 
     <div class="col-lg-4 m-5">
-      <app-featured-game></app-featured-game>
+      <app-products></app-products>
     </div>
+
   </div>
 
   <div class="row justify-content-center">
+
     <div class="col-lg-3 m-5">
       <app-featured-game></app-featured-game>
     </div>
@@ -33,6 +36,7 @@
     <div class="col-lg-3 m-5">
       <app-featured-game></app-featured-game>
     </div>
+
   </div>
 </div>
 
