--- a/src/app/components/games-page/games-page.component.html
+++ b/src/app/components/games-page/games-page.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div *ngFor="let i of products" class="col-xs-12 col-sm-4 col-lg-3 mt-2 d-flex justify-content-center">
       <div class="card">
-        <a href="{{i.primaryUrl}}">
+        <a href="{{i.primaryUrl}}" target="_blank">
        <!-- [ngClass]="isFirst ? 'feturedProduct' : ''" class="showcaseBackground mb-2"  [style.background-image]="'url(' + i.showcaseImageUrl +')'"> -->
           <img src="{{i.showcaseImageUrl}}" alt="{{i.name}}" class="card-image-top showcaseBackground">
         </a>
@@ -12,5 +12,5 @@
         </div>
       </div>
     </div>
-   </div>
+  </div>
 </div>
