Added a good look to footer, adjusted products page spacing to beter fit the footer with only one row, finally changed games to products

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,10 @@
-<footer class="footer mt-auto py-3">
+<footer class="footer mt-auto py-3 footer_upper">
   <div class="container">
     <div class="row">
       <app-footer-upper></app-footer-upper>
     </div>
+  </div>
+  <div class="footer-text">
+    © 2023 ImmersiPi, the ImmersiPi logo, the game names and related marks are trade marks of ImmersiPi or related entities. All rights reserved
   </div>
 </footer>
