--- a/src/app/components/front-page/products/products.component.html
+++ b/src/app/components/front-page/products/products.component.html
@@ -5,5 +5,5 @@
   <div class="card-body card-body-custom">
     <h5 class="card-title">Products</h5>
     <p class="card-text">Check out all our products</p>
-    <a routerLink="/games" class="btn btn-primary">Check it out</a>
+    <a routerLink="/products" class="btn btn-primary">Check it out</a>
   </div>
