--- a/src/app/components/footer/footer-upper/footer-upper.component.html
+++ b/src/app/components/footer/footer-upper/footer-upper.component.html
@@ -1,8 +1,8 @@
-<div class="footer">
-  <div class="container-fluid">
+<div class="footer footer_upper">
+  <div class="container-fluid mt-5 pt-5">
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-lg-3">
-        <section class="IPiInfo">
+      <div class="col-xs-12 col-sm-6 col-lg-3 border-end border-secondary">
+        <section class="IPiInfo border-end-0">
           <div class="IPiInfoHeader">
             ImmersiPi
           </div>
@@ -12,14 +12,11 @@
         </section>
       </div>
       <div class="col-xs-12 col-sm-6 col-lg-4">
-
       </div>
-      <div class="col">
-        <nav>
-          <a href="">Link</a>
-          <a href="">Link</a>
-          <a href="a">Link</a>
-        </nav>
+      <div class="col border-start border-secondary">
+          <a routerLink="/products" style="text-decoration: none; color: inherit">Products</a> <br>
+          <a routerLink="/studio" style="text-decoration: none; color: inherit">Studio</a> <br>
+          <a routerLink="/news" style="text-decoration: none; color: inherit">News</a>
       </div>
     </div>
   </div>
