--- a/src/app/components/games-page/games-page.component.html
+++ b/src/app/components/games-page/games-page.component.html
@@ -1,6 +1,7 @@
-<div class="container p-4 m-auto">
+<div class="container mt-5 pt-5 pb-5 mb-5 m-auto">
   <div class="row justify-content-center">
-    <div *ngFor="let i of products" class="col-xs-12 col-sm-4 col-lg-3 mt-2 d-flex justify-content-center">
+
+    <div *ngFor="let i of products" class="col-xs-12 col-sm-5 col-lg-4 mt-4 d-flex justify-content-center">
       <div class="card">
         <a href="{{i.primaryUrl}}" target="_blank">
        <!-- [ngClass]="isFirst ? 'feturedProduct' : ''" class="showcaseBackground mb-2"  [style.background-image]="'url(' + i.showcaseImageUrl +')'"> -->
@@ -12,5 +13,6 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
