Copied the text from front page, and small change to news page

--- a/src/app/components/about-page/about-page.component.html
+++ b/src/app/components/about-page/about-page.component.html
@@ -1,1 +1,12 @@
-<p>about-page works!</p>
+<div class="px-4 py-5 my-5 text-center">
+  <img src="assets\Images\FirstCompanyLogoBluleish.png" alt="Logo" class="d-block mx-auto mb-4" width="72" height="72">
+  <h1 class="display-5 fw-bold brand-text">ImmersiPi</h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">
+      At ImmersiPi, we believe that life should be an adventure, an escape from the ordinary. Our mission is to deliver
+      cutting-edge products that immerse people into their surroundings, taking them on incredible journeys beyond
+      imagination. With a primary focus on captivating games, we aspire to revolutionize entertainment and redefine the
+      way you experience the world around you.
+    </p>
+  </div>
+</div>
