--- a/src/app/components/page-under-construction/page-under-construction.component.html
+++ b/src/app/components/page-under-construction/page-under-construction.component.html
@@ -1,1 +1,1 @@
-<p>page-under-construction works!</p>
+<p style="text-align: center; font-weight: 700;" class="m-5 p-5 fs-2">Page Under Construction!</p>
