--- a/src/app/components/front-page/front-page.component.html
+++ b/src/app/components/front-page/front-page.component.html
@@ -30,11 +30,11 @@
   <div class="row justify-content-center">
 
     <div class="col-lg-3 m-5">
-      <app-featured-game></app-featured-game>
+      <app-about-page-card></app-about-page-card>
     </div>
 
     <div class="col-lg-3 m-5">
-      <app-featured-game></app-featured-game>
+      <app-news-page-card></app-news-page-card>
     </div>
 
   </div>
