--- a/src/app/components/front-page/news-page/news-page.component.html
+++ b/src/app/components/front-page/news-page/news-page.component.html
@@ -1,1 +1,10 @@
-<p>news-page works!</p>
+<div class="card justify-content-center align-items-center m-auto mainCard" >
+
+  <img src="assets/Images/bg_frame1.png" class="card-img-top rounded-3" alt="Image 1">
+
+  <div class="card-body card-body-custom">
+    <h5 class="card-title">News</h5>
+    <p class="card-text">Check out all our products</p>
+    <a routerLink="/news" class="btn btn-primary">Check it out</a>
+  </div>
+</div>
