--- a/src/app/components/front-page/products/products.component.html
+++ b/src/app/components/front-page/products/products.component.html
@@ -7,3 +7,4 @@
     <p class="card-text">Check out all our products</p>
     <a routerLink="/products" class="btn btn-primary">Check it out</a>
   </div>
+</div>
